Purpose:     Code cleanup/bug fix
Description:
    Fix configuration files to allow 64-bit compilation of the library with
a 64-bit version of zlib.

Solution:
    Moved important compiler flags settings from CC macro to CFLAGS macro.
Instead of setting CC (F9X, CXX) environment variable for compiling for 64-bit
code, users should just set the CFLAGS (FFLAGS, CXXFLAGS) to -q64.
    Updated INSTALL file to reflect this change.

Platforms tested:
    IBM p690 (copper) w/parallel, FORTRAN, C++, srcdir.
    Platforms specific - h5committest does not apply.

--- a/branches/hdf5_1_6/release_docs/INSTALL
+++ b/branches/hdf5_1_6/release_docs/INSTALL
@@ -265,14 +265,11 @@
 	To configure AIX 64 bits including fortran API and C++,
 	(Remark: need to hardset $AR to 'ar -X 64'.)
 	Serial:
-	    $ CC='xlc -q64' F9X='xlf -q64' CXX='xlC -q64' AR='ar -X 64'\
+	    $ CFLAGS=-q64 FFLAGS=-q64 CXXFLAGS=-q64 AR='ar -X 64'\
 	    $ ./configure --enable-fortran
 	Parallel:
-	    $ CC='mpcc_r -q64' F9X='mpxlf_r -q64' AR='ar -X 64'\
-	    $ ./configure --enable-fortran
-
-	Specifying these machine architecture flags in the CFLAGS variable
-	(see below) will not work correctly.
+	    $ CFLAGS=-q64 FFLAGS=-q64 AR='ar -X 64'\
+	    $ ./configure --enable-fortran --enable-parallel
 
 5.3.3. Additional compilation flags
 	If addtional flags must be passed to the compilation commands
