--- a/branches/hdf5_1_6/release_docs/INSTALL
+++ b/branches/hdf5_1_6/release_docs/INSTALL
@@ -455,9 +455,11 @@
 
 5.3.11. Threadsafe capability
 	The HDF5 library can be configured to be thread-safe (on a very
-	large scale) with the with the `--enable-threadsafe' and
-        '-with-pthread=INC,LIB' (or '--with-pthread=DIR') flags to configure.
-        Read the file doc/TechNotes/ThreadSafeLibrary.html for further details.
+	large scale) with the with the `--enable-threadsafe' flag to
+        the configure script.  Some platforms may also require the 
+        '-with-pthread=INC,LIB' (or '--with-pthread=DIR') flag to the configure
+        script as well.  Read the file doc/TechNotes/ThreadSafeLibrary.html
+        for further details.
 
 5.3.12. Backward compatibility
 	The 1.6 version of the HDF5 library can be configured to operate
